# Aerial_Stereo_Dataset

./: README.md
sgm_cuda_256/: CMakeLists.txt  README.md  cost_aggregation.h  disparity_method.cu  disparity_method.h  example.sh  main.cu  median_filter.cu  median_filter.h  util.h
sgm_cuda_256/WithOpenCV/: CMakeLists.txt  README.md  configuration.h  example.sh  main.cu
sgm_cuda_256/opencv/: Ptr.hpp  base.hpp  core.cpp  core.hpp  cvdef.hpp  cvstd.cpp  cvstd.hpp  cvtColor.hpp  fast_math.hpp  filterengine.hpp  imgproc.cpp  imgproc.hpp  interface.hpp  mat.hpp  matx.hpp  remap.hpp  resize.hpp  saturate.hpp  types.hpp  utility.hpp
